// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBoxInput renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hRVLan"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 eKUXDU"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dWhfdE FormField__FormFieldBox-sc-m9hood-0 iLyaEy CheckBoxInput__StyledFormField-sc-16fe619-0 czdhFM"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hUUdde FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jAoDMx"
          disabled=""
          label="Some input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 khtvtA StyledCheckBox-sc-1dbk5ju-6 cLdvuG"
            disabled=""
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 hGxwPA"
              disabled=""
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 gdPHUS StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 kEjLTF"
              disabled=""
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hRVLan"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 eKUXDU"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dWhfdE FormField__FormFieldBox-sc-m9hood-0 iLyaEy CheckBoxInput__StyledFormField-sc-16fe619-0 czdhFM"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hUUdde FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fbFZQ"
          label="Some input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 khtvtA StyledCheckBox-sc-1dbk5ju-6 cLdvuG"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 ezTCxs"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 gdPHUS StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 kEjLTF"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders a toggle input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hRVLan"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 eKUXDU"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dWhfdE FormField__FormFieldBox-sc-m9hood-0 iLyaEy CheckBoxInput__StyledFormField-sc-16fe619-0 czdhFM"
      tabindex="0"
    >
      <label
        class="StyledText-sc-1sadyjn-0 julVzF"
      >
        A checkbox
      </label>
      <span
        class="StyledText-sc-1sadyjn-0 dkbpSN"
      >
        A helpful message
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 hUUdde FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fbFZQ"
          label="Hi friends"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 khtvtA StyledCheckBox-sc-1dbk5ju-6 cLdvuG"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 ezTCxs"
              tabindex="-1"
              type="checkbox"
            />
            <span
              class="StyledCheckBox__StyledCheckBoxToggle-sc-1dbk5ju-4 bJxob"
            >
              <span
                class="StyledCheckBox__StyledCheckBoxKnob-sc-1dbk5ju-5 evdyXo"
              />
            </span>
          </div>
          <span>
            Hi friends
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 hleChS"
      >
        Some info
      </span>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with a form field label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hRVLan"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 eKUXDU"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dWhfdE FormField__FormFieldBox-sc-m9hood-0 iLyaEy CheckBoxInput__StyledFormField-sc-16fe619-0 czdhFM"
      tabindex="0"
    >
      <label
        class="StyledText-sc-1sadyjn-0 julVzF"
      >
        A brilliant input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 hUUdde FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fbFZQ"
          label="Some input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 khtvtA StyledCheckBox-sc-1dbk5ju-6 cLdvuG"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 ezTCxs"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 gdPHUS StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 kEjLTF"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hRVLan"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 eKUXDU"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dWhfdE FormField__FormFieldBox-sc-m9hood-0 iLyaEy CheckBoxInput__StyledFormField-sc-16fe619-0 czdhFM"
      tabindex="0"
    >
      <span
        class="StyledText-sc-1sadyjn-0 dkbpSN"
      >
        This is a very cool input
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 hUUdde FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fbFZQ"
          label="Some input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 khtvtA StyledCheckBox-sc-1dbk5ju-6 cLdvuG"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 ezTCxs"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 gdPHUS StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 kEjLTF"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hRVLan"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 eKUXDU"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dWhfdE FormField__FormFieldBox-sc-m9hood-0 iLyaEy CheckBoxInput__StyledFormField-sc-16fe619-0 czdhFM"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hUUdde FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fbFZQ"
          label="Some input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 khtvtA StyledCheckBox-sc-1dbk5ju-6 cLdvuG"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 ezTCxs"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 gdPHUS StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 kEjLTF"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 YswyP"
      >
        You failed at this
      </span>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hRVLan"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 eKUXDU"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dWhfdE FormField__FormFieldBox-sc-m9hood-0 iLyaEy CheckBoxInput__StyledFormField-sc-16fe619-0 czdhFM"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hUUdde FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fbFZQ"
          label="Some input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 khtvtA StyledCheckBox-sc-1dbk5ju-6 cLdvuG"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 ezTCxs"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 gdPHUS StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 kEjLTF"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 hleChS"
      >
        You can set a cool value
      </span>
    </div>
  </div>
</div>
`;
